# rc2-wiki-json-thingy

./: Cargo.toml  output.json
.github/workflows/: release.yml
src/: main.rs  path_map.rs  prelude.rs  test.rs
