[package]
name = "rc2-wiki-json-thingy"
version = "0.1.0"
edition = "2021"
authoer = "Multirious"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
serde_json = "1.0.108"
